--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@
 # -- repository: YOUR REPOSITORY URL                                                                     -- #
 # -- --------------------------------------------------------------------------------------------------- -- #
 
+pandas
 
