--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,8 @@
 # -- --------------------------------------------------------------------------------------------------- -- #
 
 pandas
-
+numpy 
+ta
+MetaTrader5
+tqdm
+pyswarms
